kubernetes/base/apps/home-automation/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:12.4.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http-grafana
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/grafana/provisioning/dashboards/sidecar.yaml
              name: dashboard-provider
              subPath: sidecar.yaml
            - mountPath: /tmp/dashboards
              name: dashboards
        - name: k8s-sidecar
          image: ghcr.io/kiwigrid/k8s-sidecar:2.5.4
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 128Mi
          volumeMounts:
            - mountPath: /tmp/dashboards
              name: dashboards
      serviceAccountName: grafana-sidecar
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: dashboards
          emptyDir: {}
